fix scrool on mobile in app__main

--- a/src/styles/admin.layout.scss
+++ b/src/styles/admin.layout.scss
@@ -35,6 +35,7 @@
 
     &__main {
         flex: auto;
+        min-width: 0;
 
         display: flex;
         gap: 1.5em;
